--- a/profile/index.html
+++ b/profile/index.html
@@ -39,7 +39,7 @@
             />
           </div>
           <div class="header__bio">
-            <h1>Kenneth Kafeero</h1>
+            <h1>Sir Kenneth Kafeero</h1>
             <p>
               A creative thinker and vibrant team player. An Entrepreneur and
               Construction Manager currently finding product-market fit with EC
